@@ -7,7 +7,7 @@
                 em:description="Displaying tabs vertically"
                 em:creator="spenibus"
                 em:id="vertical-tabs@spenibus"
-                em:version="20141108-0119"
+                em:version="20141108-0150"
                 em:homepageURL="http://spenibus.net">
 
       <!-- Firefox -->
