@@ -1,2 +1,6 @@
+2014-11-08 01:50 +0000
+   - updated userChrome.css
+
+
 2014-11-08 01:19 +0000
    - initial release
